# mod_call_control

./: .gitignore  .gitmodules  Makefile.am  call_control_api.c  call_control_api.h  call_control_webhook.c  call_control_webhook.h  mod_call_control.c  mod_call_control.h  readme.md
autoload_conf/: call_control.conf.xml
